--- a/app/index.pug
+++ b/app/index.pug
@@ -1,4 +1,13 @@
 doctype html
 head
     title Nura elite
+    link(rel="icon" type="image/x-icon" href="./img/favicon.png")
     link(rel='stylesheet' href='./css/main.css')
+
+body
+    header
+        nav
+            .logo
+                a(href="#")
+                    img(src="./img/logo.png")
+        section.banner
