--- a/app/sass/nullstyle.sass
+++ b/app/sass/nullstyle.sass
@@ -29,13 +29,14 @@ html,
 body
    height: 100%
    width: 100%
-   font-weight: 300
    -ms-text-size-adjust: 100%
    -moz-text-size-adjust: 100%
    -webkit-text-size-adjust: 100%
 
+   //Dynamic properties
    font-family:  "Fira sans", sans-serif
    font-size: 16px
+   font-weight: 300
 
 input,
 button,
