--- a/app/index.pug
+++ b/app/index.pug
@@ -101,29 +101,30 @@ body
                     p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
 
         section._2_slider
-            .slider__wrap.container
+            .container
                 h2 Cottages
-                .slider__box
-                    .slider__box.-active
-                        img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
-                        img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
-                        img(src="./img/2_slider_img-dots-bg.png" alt)
-                    .slider__box
-                        img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
-                        img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
-                        img(src="./img/2_slider_img-dots-bg.png" alt)
-                    .slider__box
-                        img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
-                        img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
-                        img(src="./img/2_slider_img-dots-bg.png" alt)
-                    .slider__box
-                        img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
-                        img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
-                        img(src="./img/2_slider_img-dots-bg.png" alt)
+                .slider__wrap
+                    .slider__slides
+                        .slider__box
+                            .slider__box__inner
+                                img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
+                                img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
+                        .slider__box
+                            .slider__box__inner
+                                img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
+                                img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
+                        .slider__box
+                            .slider__box__inner
+                                img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
+                                img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
+                        .slider__box
+                            .slider__box__inner
+                                img(src="./img/2_slider_img.jpg" alt="Cottage photo" title="Cottage")
+                                img(src="./img/2_slider_img-planing.png" alt="Cottage planing" title="Planing")
                     .slider__prev-btn
-                        .slider__prev-btn__inner
+                        img(src="./img/arrow-left.svg")
                     .slider__next-btn
-                        .slider__next-btn__inner
+                        img(src="./img/arrow-right.svg")
 
         section._3_location.container
             .location__content
@@ -240,3 +241,5 @@ body
                 a(href="#") Technologies
             li
                 a(href="#") Payments methods
+
+    script(src="./js/script.js")
