--- a/app/index.pug
+++ b/app/index.pug
@@ -100,6 +100,7 @@ body
                     h3 Company goal
                     p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
 
+
         section._2_slider
             .container
                 h2 Cottages
@@ -126,120 +127,167 @@ body
                     .slider__next-btn
                         img(src="./img/arrow-right.svg")
 
+
         section._3_location.container
             .location__content
                 h2 Location
                 p Closed cottage village Nura Elite is located in an elite and promising area of the capital, next to the green belt in the neighborhood of Vella Village.
                 p Nura Elite is a great space for solitude and active family life in harmony with nature, without city noise and with convenient transport interchange.
             .location__map
-                img(src="./img/3_location_img-map.jpg" alt="Map" title="Map")
-                img(src="./img/2_slider_img-dots-bg.png" alt)
+                img.location__map__img(src="./img/3_location_img-map.jpg" alt="Map" title="Map")
+                div.location__map__bg-color
+                img.location__map__bg-dots(src="./img/_3_location__dots.svg" alt)
 
-        section._4_advantages.container
-            h2 The main advantages of the town
-            ul
-                li Favorable location
-                li Protected area
-                li The town is fenced around the perimeter with a 3-meter fence, equipped with a 24/7 video surveillance system
-                li Here you will feel privacy, security and comfort
-                li
-                    img(src="./img/4_advantages_img.png" alt="Protected area" title="Protected area")
-                li Individual plots are fenced with 2-meter fences
-                li Own application
-                li Each owner of the cottage is given the opportunity to build additional buildings on his land plot: a bathhouse, a sauna, a summer kitchen, etc.
+
+        section._4_advantages
+            .container
+                img.advantages__dots(src="./img/dots.svg")
+                img.advantages__bg(src="./img/4_advantages_bg.svg")
+                .advantages__content-box
+                    h2 The main advantages #[br] of the town
+                    ul
+                        li
+                            img(src="./img/4_advantages_icon-map.svg")
+                            p Favorable #[br] location
+                        li
+                            img(src="./img/4_advantages_icon-fencing.svg")
+                            p The town is fenced around the perimeter with a 3-meter fence, equipped with a 24/7 video surveillance system
+                        li
+                            img(src="./img/4_advantages_icon-protection.svg")
+                            p Protected #[br] area
+                        li
+                            img(src="./img/4_advantages_icon-armchair.svg")
+                            p Here you will feel privacy, security and comfort
+                    .advantages__imb-box
+                        img(src="./img/4_advantages_img.jpg" alt="Protected area" title="Protected area")
+                    ul
+                        li
+                            img(src="./img/4_advantages_icon-house.svg")
+                            p Individual plots are fenced with 2-meter fences
+                        li
+                            img(src="./img/4_advantages_icon-phone.svg")
+                            p Own application
+                    ul
+                        li
+                            img(src="./img/4_advantages_icon-wall.svg")
+                            p Each owner of the cottage is given the opportunity to build additional buildings on his #[br] land plot: a bathhouse, a sauna, a summer kitchen, etc.
+
 
         section._5_why-nura.container
-            h2 Why NURA ELITE
-            .why-nura__img-box
-                img(src="./img/5_why-nura_img.jpg")
-                img(src="./img/2_slider_img-dots-bg.png")
-            ul
-                li
-                    b Energy efficiency
-                    p Houses keep warm in winter and cool in summer
-                li
-                    b Ecologically clean area
-                    p The town is located near the forest belt and the village of Nura-Yesil
-                li
-                    b Security
-                    p Closed campus with round-the-clock video surveillance
-                li
-                    b Communications
-                    p Centralized water supply, power supply and sewerage.
-                    p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
+            h2 Why NURA ELITE?
+            .why__nura__content-box
+                .why-nura__img-box
+                    img.why-nura__img(src="./img/5_why-nura_img.jpg")
+                    .why-nura__bg-color
+                    img.why-nura__bg-dots(src="./img/_3_location__dots.svg")
+                ul
+                    li
+                        img(src="./img/5_why-nura_icon-lightning.svg")
+                        span
+                            b Energy efficiency
+                            p Houses keep warm in winter and cool in summer
+                    li
+                        img(src="./img/4_advantages_icon-protection.svg")
+                        span
+                            b Security
+                            p Closed campus with round-the-clock video surveillance
+                ul
+                    li
+                        img(src="./img/5_why-nura_icon-hends.svg")
+                        span
+                            b Ecologically clean area
+                            p The town is located near the forest belt and the village of Nura-Yesil
+                    li
+                        img(src="./img/5_why-nura_icon-tear.svg")
+                        span
+                            b Communications
+                            p Centralized water supply, power supply and sewerage.
+                            p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
 
         section._6_technologies.container
             h2 Building technology
-            ul
-                li
-                    img(src="./img/6_technology_img-1.png" alt="Wall construction" title="Wall construction")
-                    b Wall construction
-                    p Double burnt red brickwork - 38/40 cm, insulated with mineral board - 10 cm, and cladding with HPL and FBC panel
-                li
-                    img(src="./img/6_technology_img-2.png" alt="Window construction" title="Window construction")
-                    b Window construction
-                    p High environmental friendliness, safety, reliability and durability, enhanced heat-insulating capacity, which is provided by a five-chamber structure of a profile with triple glazing and sound insulation (the Helios system is designed for 44 mm thick double-glazed windows with an air gap of 16 mm, passing through which low-frequency noises lose their intensity, which is very valued by residents) using FUNKE technology
-                li
-                    img(src="./img/6_technology_img-3.png" alt="Door construction" title="Door construction")
-                    b Door construction
-                    p IZO TERMO technology.
-                    The doors do not touch the outer ones. Between them is an insulator - a shield made of Portuguese cork oak 8 mm thick. IZO TERMO eliminates the "cold bridge" and does not allow heat to leave the house. With this technology, you do not need a vestibule and a second door.
-                li
-                    img(src="./img/6_technology_img-4.png" alt="Roof structure" title="Roof structure")
-                    b Roof structure
-                    p Flexible tile TECHNONICOL SHINGLAS is a guarantee of comfort and safety of your home. Houses with a roof made of TECHNONICOL SHINGLAS shingles captivate with their harmony and grace. The collections are distinguished by a variety of shapes and colors.
-                li
-                    img(src="./img/6_technology_img-5.png" alt="Façade construction" title="Façade construction")
-                    b Façade construction
-                    p HPL panel is a high quality construction product for durable facade cladding. Weather resistance +180s/-180s with high weatherproofing effect. This protection is provided by the use of dual-curing acrylic polyurethane resins. Refers to environmentally friendly materials.
-                li
-                    img(src="./img/6_technology_img-6.png" alt="" title="")
-                    b Foundation blocks wall
-                    p FBC is a unique and high-quality building material for durable facade cladding.
-                        | High frost resistance, fire safety, good sound and heat insulation, tightness, increased strength, weather resistance.
-                        | for both humans and the environment. They do not contain asbestos, consist of environmentally friendly natural ingredients: 82-85% cement, wood fiber, weight loss additives, organosilicon compounds
+            .technologies__content-box
+                ul
+                    li
+                        img(src="./img/6_technology_img-1.png" alt="Wall construction" title="Wall construction")
+                        h3 Wall construction
+                        p Double burnt red brickwork - 38/40 cm, insulated with mineral board - 10 cm, and cladding with HPL and FBC panel
+                    li
+                        img(src="./img/6_technology_img-3.png" alt="Door construction" title="Door construction")
+                        h3 Door construction
+                        p IZO TERMO technology.
+                        The doors do not touch the outer ones. Between them is an insulator - a shield made of Portuguese cork oak 8 mm thick. IZO TERMO eliminates the "cold bridge" and does not allow heat to leave the house. With this technology, you do not need a vestibule and a second door.
+                    li
+                        img(src="./img/6_technology_img-5.png" alt="Façade construction" title="Façade construction")
+                        h3 Façade construction
+                        p HPL panel is a high quality construction product for durable facade cladding. Weather resistance +180s/-180s with high weatherproofing effect. This protection is provided by the use of dual-curing acrylic polyurethane resins. Refers to environmentally friendly materials.
+                ul
+                    li
+                        img(src="./img/6_technology_img-2.png" alt="Window construction" title="Window construction")
+                        h3 Window construction
+                        p High environmental friendliness, safety, reliability and durability, enhanced heat-insulating capacity, which is provided by a five-chamber structure of a profile with triple glazing and sound insulation (the Helios system is designed for 44 mm thick double-glazed windows with an air gap of 16 mm, passing through which low-frequency noises lose their intensity, which is very valued by residents) using FUNKE technology
+                    li
+                        img(src="./img/6_technology_img-4.png" alt="Roof structure" title="Roof structure")
+                        h3 Roof structure
+                        p Flexible tile TECHNONICOL SHINGLAS is a guarantee of comfort and safety of your home. Houses with a roof made of TECHNONICOL SHINGLAS shingles captivate with their harmony and grace. The collections are distinguished by a variety of shapes and colors.
+                    li
+                        img(src="./img/6_technology_img-6.png" alt="" title="")
+                        h3 Foundation blocks wall
+                        p FBC is a unique and high-quality building material for durable facade cladding.
+                            | High frost resistance, fire safety, good sound and heat insulation, tightness, increased strength, weather resistance.
+                            | for both humans and the environment. They do not contain asbestos, consist of environmentally friendly natural ingredients: 82-85% cement, wood fiber, weight loss additives, organosilicon compounds
             .technologies__download-presentation
                 h2 Download presentation
                 p Leave your contacts and we will send you
                 form
-                    input(type="text")
-                    input(type="tel")
+                    input(type="text" placeholder="Your name")
+                    input(type="tel" placeholder="Phone number")
                     input(type="submit")
 
         section._7_payments.container
             h2 Payment methods
             ul
                 li
-                    img(src="./img/7_payments_icon-1.png")
-                    p Getting a loan through “ЖилСтройСберБанк”
+                    img(src="./img/7_payments_icon-1.svg")
+                    p Getting a loan through #[br] “ЖилСтройСберБанк”
                 li
-                    img(src="./img/7_payments_icon-2.png")
-                    p Obtaining interest-free installments from the developer NURA ELITE
-                i
-                    img(src="./img/7_payments_icon-3.png")
-                    p Kazakhstan Mortgage Company «Орда»
+                    img(src="./img/7_payments_icon-2.svg")
+                    p Obtaining #[br] interest-free installments #[br] from the developer #[br] NURA ELITE
                 li
-                    img(src="./img/7_payments_icon-4.png")
-                    p Payment with cryptocurrency (Bitcoin)
+                    img(src="./img/7_payments_icon-3.svg")
+                    p Kazakhstan Mortgage #[br] Company «Орда»
+                li
+                    img(src="./img/7_payments_icon-4.svg")
+                    p Payment with #[br] cryptocurrency (Bitcoin)
             .payments__adress
                 .payments__adress__map
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2503.755751349219!2d71.42242228172763!3d51.13141316940208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424586a04e901251%3A0x5047617e2afb5feb!2z0JjQt9GD0LzRgNGD0LTQvdGL0Lkg0LrQsi3Quywg0YPQuy4g0JTQuNC90LzRg9GF0LDQvNC10LTQsCDQmtGD0L3QsNC10LLQsCAxMCwg0J3Rg9GALdCh0YPQu9GC0LDQvSAwMjAwMDAsINCa0LDQt9Cw0YXRgdGC0LDQvQ!5e0!3m2!1sru!2sua!4v1646328085084!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                .payments__adress__contats
+                .payments__adress__contacts
                     h2 Contacts
                     p st. Kunaeva 10, business center "Emerald", block - A, floor 1
-                    a(href="tel:+77000011888") +7 (700) 001-18-88
-                    a(href="mailto:info@nuramm.kz") info@nuramm.kz
-                    a(href="https://www.instagram.com/nura_premier/" target="_blank") @nura.premier
+                    .payments__adress__contacts-box
+                        ul
+                            li
+                                img(src="./img/phone-black.svg")
+                                a(href="tel:+77000011888") +7 (700) 001-18-88
+                            li
+                                img(src="./img/email-black.svg")
+                                a(href="mailto:info@nuramm.kz") info@nuramm.kz
+                            li
+                                img(src="./img/inst-black.svg")
+                                a(href="https://www.instagram.com/nura_premier/" target="_blank") @nura.premier
+                        img(src="./img/7_payments_qr-code.svg")
 
-    footer.container
-        ul
-            li
-                a(href="#") Benefits
-            li
-                a(href="#") Why we are
-            li
-                a(href="#") Technologies
-            li
-                a(href="#") Payments methods
+    footer
+        .container
+            ul
+                li
+                    a(href="#") Benefits
+                li
+                    a(href="#") Why we are
+                li
+                    a(href="#") Technologies
+                li
+                    a(href="#") Payments methods
 
     script(src="./js/script.js")
